Rename and use proper ellipse builder

--- a/notebooks/Observational_maps.ipynb
+++ b/notebooks/Observational_maps.ipynb
@@ -1341,7 +1341,7 @@
     "    fig,ax=plt.subplots(figsize=figsize)\n",
     "    \n",
     "    for i, (radius,centre) in enumerate(zip(circle_radii,circle_centres)):\n",
-    "        circle = np.array(PH.draw_ellipse(radius, ratio=1, centre=centre)).T\n",
+    "        circle = np.array(PH.get_ellipse_coords(radius, ratio=1, centre=centre)).T\n",
     "\n",
     "        points_inside = MF.in_circle(x_values, y_values, centre[0], centre[1], radius)\n",
     "        \n",
@@ -1351,7 +1351,7 @@
     "        lw = 2 if sum(points_inside) < min_star_number else 0.5\n",
     "        \n",
     "        if sum(points_inside) < min_star_number:\n",
-    "            yellow_circle = PH.draw_ellipse(radius=radius-0.03,centre=centre)\n",
+    "            yellow_circle = PH.get_ellipse_coords(radius=radius-0.03,centre=centre)\n",
     "            ax.plot(yellow_circle[0],yellow_circle[1], color=\"yellow\", lw=1)\n",
     "        ax.plot(circle[:,0],circle[:,1], color=\"k\", lw=0.5)\n",
     "        \n",
@@ -1676,7 +1676,7 @@
     "        circle_radii, circle_centres = get_circle_radii_and_centres(pop_idx=col,below_min_number=True)\n",
     "\n",
     "        for radius,centre in zip(circle_radii,circle_centres):\n",
-    "            circle = np.array(PH.draw_ellipse(radius, ratio=1, centre=centre, tilt=0)).T\n",
+    "            circle = np.array(PH.get_ellipse_coords(radius, ratio=1, centre=centre, tilt=0)).T\n",
     "\n",
     "            points_inside = MF.in_circle(all_x_values, all_y_values, centre[0], centre[1], radius)\n",
     "\n",
@@ -2067,7 +2067,7 @@
     "                circle_radii, circle_centres = get_circle_radii_and_centres(pop_idx=col, below_min_number=below_min_number_blobs)\n",
     "\n",
     "                for radius,centre in zip(circle_radii,circle_centres):\n",
-    "                    circle = np.array(PH.draw_ellipse(radius, ratio=1, centre=centre, tilt=0)).T\n",
+    "                    circle = np.array(PH.get_ellipse_coords(radius, ratio=1, centre=centre, tilt=0)).T\n",
     "\n",
     "                    points_inside = MF.in_circle(all_x_values, all_y_values, centre[0], centre[1], radius)\n",
     "\n",
@@ -2369,7 +2369,7 @@
     "            circle_radii, circle_centres = get_circle_radii_and_centres(pop_idx=col)\n",
     "            \n",
     "            for radius,centre in zip(circle_radii,circle_centres):\n",
-    "                circle = np.array(EF.draw_ellipse(radius, ratio=1, centre=centre, tilt=0)).T\n",
+    "                circle = np.array(PH.get_ellipse_coords(radius, ratio=1, centre=centre, tilt=0)).T\n",
     "\n",
     "                points_inside = MF.in_circle(all_x_values, all_y_values, centre[0], centre[1], radius)\n",
     "\n",
