--- a/notebooks/Visualisation.ipynb
+++ b/notebooks/Visualisation.ipynb
@@ -2881,13 +2881,13 @@
     "            for distance in distance_list:\n",
     "                \n",
     "                if distance in distance_selection:\n",
-    "                    x_outer,y_outer = PH.draw_ellipse(distance, phirange=[angle_selection[1],angle_selection[0]])\n",
+    "                    x_outer,y_outer = PH.get_ellipse_coords(distance, phirange=[angle_selection[1],angle_selection[0]])\n",
     "                    axs[index].plot(x_outer+sun_coords[0],y_outer+sun_coords[1], 'w--',linewidth=contour_lw,dashes=dashes)\n",
     "                    \n",
-    "                    x_inner,y_inner = PH.draw_ellipse(distance, phirange=[angle_selection[0],angle_selection[1]])\n",
+    "                    x_inner,y_inner = PH.get_ellipse_coords(distance, phirange=[angle_selection[0],angle_selection[1]])\n",
     "                    axs[index].plot(x_inner+sun_coords[0],y_inner+sun_coords[1], 'w--',linewidth=highlight_factor*contour_lw,dashes=[d/highlight_factor for d in dashes])\n",
     "                else:\n",
-    "                    x_circ,y_circ = PH.draw_ellipse(distance)\n",
+    "                    x_circ,y_circ = PH.get_ellipse_coords(distance)\n",
     "                    axs[index].plot(x_circ+sun_coords[0],y_circ+sun_coords[1], 'w--',linewidth=contour_lw,dashes=dashes)\n",
     "                    \n",
     "                if plotting_line_labels and distance in distance_label_vals:\n",
@@ -2906,13 +2906,13 @@
     "            for radius in radii_list:\n",
     "\n",
     "                if radius in radius_selection:\n",
-    "                    x_outer,y_outer = PH.draw_ellipse(radius)#, phirange=[angle_selection[1],angle_selection[0]])\n",
+    "                    x_outer,y_outer = PH.get_ellipse_coords(radius)#, phirange=[angle_selection[1],angle_selection[0]])\n",
     "                    axs[index].plot(x_outer,y_outer, 'w--',linewidth=contour_lw,dashes=dashes)\n",
     "                    \n",
-    "                    x_inner,y_inner = PH.draw_ellipse(radius)#, phirange=[angle_selection[0],angle_selection[1]])\n",
+    "                    x_inner,y_inner = PH.get_ellipse_coords(radius)#, phirange=[angle_selection[0],angle_selection[1]])\n",
     "                    axs[index].plot(x_inner,y_inner, 'w--',linewidth=highlight_factor*contour_lw,dashes=[d/highlight_factor for d in dashes])\n",
     "                else:\n",
-    "                    x_circ,y_circ = PH.draw_ellipse(radius)\n",
+    "                    x_circ,y_circ = PH.get_ellipse_coords(radius)\n",
     "                    axs[index].plot(x_circ,y_circ, 'w--',linewidth=contour_lw,dashes=dashes)\n",
     "        \n",
     "        if nrows*ncols == 2:\n",
