fix matplotlib param functions import

--- a/notebooks/Visualisation.ipynb
+++ b/notebooks/Visualisation.ipynb
@@ -77,7 +77,7 @@
     "from matplotlib import colormaps as mplcmaps\n",
     "import matplotlib.cm as cm\n",
     "\n",
-    "from matplotlib_params import set_matplotlib_params,reset_rcParams\n",
+    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
