--- a/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
+++ b/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from matplotlib_params import set_matplotlib_params,reset_rcParams\n",
+    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
