--- a/notebooks/Observational_maps.ipynb
+++ b/notebooks/Observational_maps.ipynb
@@ -80,7 +80,7 @@
     "import matplotlib.cm as cm\n",
     "import matplotlib.path as mpltPath\n",
     "\n",
-    "from matplotlib_params import set_matplotlib_params,reset_rcParams\n",
+    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
