--- a/notebooks/other_notebooks/voronoi_binning.ipynb
+++ b/notebooks/other_notebooks/voronoi_binning.ipynb
@@ -100,7 +100,7 @@
     "from matplotlib import cm\n",
     "import matplotlib.path as mpltPath\n",
     "\n",
-    "from matplotlib_params import set_matplotlib_params,reset_rcParams\n",
+    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
