--- a/notebooks/Visualisation.ipynb
+++ b/notebooks/Visualisation.ipynb
@@ -3122,9 +3122,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Apogee windows"
    ]
@@ -3136,8 +3134,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-24T12:56:19.043292Z",
      "start_time": "2023-11-24T12:56:19.011376Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3152,8 +3149,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-24T12:56:20.582194Z",
      "start_time": "2023-11-24T12:56:20.538632Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3168,8 +3164,7 @@
      "end_time": "2023-11-24T12:56:20.992410Z",
      "start_time": "2023-11-24T12:56:20.956018Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -3198,24 +3193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.con"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-24T12:56:22.055352Z",
      "start_time": "2023-11-24T12:56:22.024494Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3235,10 +3218,7 @@
      "end_time": "2023-11-24T12:56:30.039534Z",
      "start_time": "2023-11-24T12:56:29.934820Z"
     },
-    "code_folding": [
-     0
-    ],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -3293,8 +3273,7 @@
     },
     "code_folding": [
      4
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [
     {
@@ -3328,9 +3307,9 @@
      "start_time": "2023-11-24T13:07:55.478590Z"
     },
     "code_folding": [
+     0,
      56
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [
     {
@@ -3416,8 +3395,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-24T17:52:30.155252Z",
      "start_time": "2023-11-24T17:52:30.118090Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3442,8 +3420,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-24T17:52:17.513070Z",
      "start_time": "2023-11-24T17:52:17.481843Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3468,8 +3445,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-24T17:50:14.462751Z",
      "start_time": "2023-11-24T17:50:14.427498Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -4729,7 +4705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "notify_time": "30",
   "toc": {
