generalise convert sim to numpy notebook

--- a/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
+++ b/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
@@ -35,6 +35,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
+    "import os\n",
     "\n",
     "import pynbody"
    ]
@@ -84,7 +85,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation_path = general_path+\"data/708main_simulation/run708main.01000.gz\""
+    "filename = \"708main\"\n",
+    "\n",
+    "simulation_path = general_path+f\"data/{filename}/run{filename}.01000.gz\"\n",
+    "\n",
+    "print(simulation_path)\n",
+    "assert os.path.isfile(simulation_path), \"Directory does not exist\""
    ]
   },
   {
@@ -95,7 +101,7 @@
    "source": [
     "R0=8.1\n",
     "\n",
-    "save_path = general_path + f\"data/708main_simulation/numpy_arrays/R0_{R0}/\"\n",
+    "save_path = general_path + f\"data/{filename}/numpy_arrays/\"\n",
     "MF.create_dir(save_path)\n",
     "\n",
     "print(save_path)"
@@ -113,7 +119,7 @@
     "#angle_list = np.arange(min_angle, max_angle + step, step)\n",
     "#angle_list = np.append(angle_list, 27)\n",
     "\n",
-    "angle_list = [-27] #[0,15,20,25,27,30,35,40,45,90]\n",
+    "angle_list = [27] #[0,15,20,25,27,30,35,40,45,90]\n",
     "print(angle_list)"
    ]
   },
@@ -127,6 +133,8 @@
     "zabs = True\n",
     "GSR = True\n",
     "\n",
+    "I_radius = 4 if filename == \"708main\" else 2\n",
+    "\n",
     "axisymmetric = False"
    ]
   },
@@ -136,9 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = time.time()\n",
-    "sim_to_np.load_process_and_save(simulation_path, save_path, angle_list=angle_list, pos_factor=pos_factor, zabs=zabs, GSR=GSR,R0=R0,axisymmetric=axisymmetric)\n",
-    "stop = time.time()"
+    "sim_to_np.load_process_and_save(simulation_path, save_path, angle_list=angle_list, pos_factor=pos_factor, zabs=zabs, GSR=GSR,R0=R0,\\\n",
+    "                                axisymmetric=axisymmetric,I_radius=I_radius,fileprefix=filename)"
    ]
   },
   {
@@ -161,7 +168,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = sim_to_np.load_pynbody_sim(simulation_path)"
+    "sim = sim_to_np.load_pynbody_sim(simulation_path)\n",
+    "\n",
+    "aligned = False\n",
+    "rotated = False"
    ]
   },
   {
@@ -171,22 +181,10 @@
    "outputs": [],
    "source": [
     "def extract_xyz_df_from_sim_stars(stars):\n",
-    "    x = np.array(stars['pos'].in_units('kpc'))[:,0]\n",
-    "    y = np.array(stars['pos'].in_units('kpc'))[:,1]\n",
-    "    z = np.array(stars['pos'].in_units('kpc'))[:,2]\n",
-    "\n",
     "    df = pd.DataFrame()\n",
-    "    df[\"x\"] = x\n",
-    "    df[\"y\"] = y\n",
-    "    df[\"z\"] = z\n",
-    "    \n",
-    "    return df\n",
+    "    df[\"x\"],df[\"y\"],df[\"z\"] = np.moveaxis(a=stars['pos'].in_units('kpc'), source=1, destination=0)\n",
     "\n",
-    "def get_bar_stars(stars, tform_min=3, tform_max=6, zmin=0.2):\n",
-    "    tform_min, tform_max = 3,6 # choose stars that between 4 and 7 Gyr old\n",
-    "    zmin = 0.2 # to avoid the spheroidal densest region in the plane\n",
-    "\n",
-    "    return stars[(stars['tform'] > tform_min) & (stars['tform'] < tform_max) & (np.abs(stars['z']) > zmin)]"
+    "    return df"
    ]
   },
   {
@@ -195,8 +193,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(sim_to_np.calculate_bar_angle_from_inertia_tensor(*sim_to_np.extract_xymass_from_stars(sim.s)))\n",
-    "MP.quick_show_xy_xz(extract_xyz_df_from_sim_stars(sim.s))"
+    "I_radius = 2\n",
+    "\n",
+    "bar_angle = sim_to_np.compute_bar_angle(sim.s,I_radius=I_radius)\n",
+    "\n",
+    "print(\"Bar angle:\",bar_angle)"
    ]
   },
   {
@@ -205,9 +206,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_stars = get_bar_stars(sim.s)\n",
-    "print(sim_to_np.calculate_bar_angle_from_inertia_tensor(*sim_to_np.extract_xymass_from_stars(bar_stars)))\n",
-    "MP.quick_show_xy_xz(extract_xyz_df_from_sim_stars(bar_stars))"
+    "fig,(ax,az)=plt.subplots(figsize=(8,8),nrows=2)\n",
+    "\n",
+    "xymax = 6\n",
+    "\n",
+    "MP.quick_show_xy(extract_xyz_df_from_sim_stars(sim.s),ax=ax,xmin=-xymax,xmax=xymax,ymin=-xymax,ymax=xymax)\n",
+    "MP.quick_show_xz(extract_xyz_df_from_sim_stars(sim.s),ax=az,xmin=-xymax,xmax=xymax,zmin=0,zmax=3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,(ax,az)=plt.subplots(figsize=(8,8),nrows=2)\n",
+    "\n",
+    "bar_stars = sim_to_np.get_bar_stars(sim)\n",
+    "\n",
+    "MP.quick_show_xy(extract_xyz_df_from_sim_stars(bar_stars),ax=ax)\n",
+    "MP.quick_show_xz(extract_xyz_df_from_sim_stars(bar_stars),ax=az)\n",
+    "plt.show()"
    ]
   },
   {
@@ -232,11 +252,11 @@
    "source": [
     "# Rotating in-place because I could not find a way to deep-copy the simulation - see https://stackoverflow.com/questions/58415397/\n",
     "\n",
-    "sim_to_np.align_bar_x_axis(sim)\n",
-    "\n",
-    "print(sim_to_np.calculate_bar_angle_from_inertia_tensor(*sim_to_np.extract_xymass_from_stars(sim.s)))\n",
-    "\n",
-    "MP.quick_show_xy_xz(extract_xyz_df_from_sim_stars(sim.s))"
+    "if aligned:\n",
+    "    print(\"Already aligned\")\n",
+    "else:    \n",
+    "    sim.rotate_z(-bar_angle)\n",
+    "    print(\"Aligned successfully\")"
    ]
   },
   {
@@ -245,11 +265,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotated_bar_stars = get_bar_stars(sim.s)\n",
+    "bar_angle_after_alignment = sim_to_np.compute_bar_angle(sim.s,I_radius=I_radius)\n",
     "\n",
-    "print(sim_to_np.calculate_bar_angle_from_inertia_tensor(*sim_to_np.extract_xymass_from_stars(rotated_bar_stars)))\n",
+    "print(bar_angle_after_alignment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xymax = 5\n",
     "\n",
-    "MP.quick_show_xy_xz(extract_xyz_df_from_sim_stars(rotated_bar_stars))"
+    "fig,axs=plt.subplots(figsize=(8,8),nrows=2)\n",
+    "MP.quick_show_xy(extract_xyz_df_from_sim_stars(sim.s),ax=axs[0],xmin=-xymax,xmax=xymax,ymin=-xymax,ymax=xymax)\n",
+    "MP.quick_show_xz(extract_xyz_df_from_sim_stars(sim.s),ax=axs[1],xmin=-xymax,xmax=xymax,zmin=0,zmax=3)\n",
+    "plt.show()"
    ]
   },
   {
@@ -265,13 +297,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_angle = 27\n",
+    "rot_angle = 27\n",
     "\n",
-    "sim.rotate_z(bar_angle)\n",
+    "if rotated:\n",
+    "    print(\"Already rotated\")\n",
+    "else:\n",
+    "    sim.rotate_z(rot_angle)\n",
+    "    print(\"Rotated successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bar_angle_after_rotation = sim_to_np.compute_bar_angle(sim,I_radius=I_radius)\n",
     "\n",
-    "print(sim_to_np.calculate_bar_angle_from_inertia_tensor(*sim_to_np.extract_xymass_from_stars(sim.s)))\n",
+    "print(bar_angle_after_rotation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xymax = 5\n",
     "\n",
-    "MP.quick_show_xy_xz(extract_xyz_df_from_sim_stars(sim.s))"
+    "fig,axs=plt.subplots(figsize=(8,8),nrows=2)\n",
+    "MP.quick_show_xy(extract_xyz_df_from_sim_stars(sim.s),ax=axs[0],xmin=-xymax,xmax=xymax,ymin=-xymax,ymax=xymax)\n",
+    "MP.quick_show_xz(extract_xyz_df_from_sim_stars(sim.s),ax=axs[1],xmin=-xymax,xmax=xymax,zmin=0,zmax=3)\n",
+    "plt.show()"
    ]
   },
   {
@@ -287,8 +344,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "axisymmetric = True\n",
-    "# axisymmetric = False\n",
+    "# axisymmetric = True\n",
+    "axisymmetric = False\n",
     "\n",
     "if axisymmetric:\n",
     "    bar_angle = 27 # whatever"
@@ -646,7 +703,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "195px"
    },
    "toc_section_display": true,
    "toc_window_display": true
