Plot Diff4 & Diff5 (kin vs |b|)

--- a/notebooks/Individual_variables.ipynb
+++ b/notebooks/Individual_variables.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "# degree_symbol = '°'\n",
-    "degree_symbol = '^\\circ'\n",
+    "degree_symbol = \"^\\circ\"\n",
     "\n",
     "mass_density_label = r\"$\\Sigma \\hspace{0.3} [\\rm M_\\odot kpc^{-2}]$\""
    ]
@@ -134,7 +134,7 @@
     "                                                     vel_y_variable=vel_y_variable,\n",
     "                                                     degree_symbol=degree_symbol)\n",
     "\n",
-    "pos_symbols_dict,pos_units_dict = mapf.get_position_symbols_and_units_dict(degree_symbol=\"°\")"
+    "pos_symbols_dict,pos_units_dict = mapf.get_position_symbols_and_units_dict(degree_symbol=r\"$%s$\"%degree_symbol)"
    ]
   },
   {
@@ -274,7 +274,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_choice = \"708main\" #stuart\n",
+    "# sim_choice = \"708main\"\n",
+    "# sim_choice = \"708mainDiff4\"\n",
+    "sim_choice = \"708mainDiff5\"\n",
     "\n",
     "rot_angle = 27\n",
     "axisymmetric = False\n",
@@ -290,7 +292,7 @@
     "load_chunk = False\n",
     "\n",
     "if not load_chunk:\n",
-    "    np_path = general_path+f\"data/708main_simulation/numpy_arrays/R0_{R0}/\"\n",
+    "    np_path = general_path+f\"data/{sim_choice}/numpy_arrays/\"\n",
     "        \n",
     "    df0 = load_sim.load_simulation(path=np_path, choice=sim_choice, rot_angle = rot_angle, axisymmetric=axisymmetric, GSR=GSR,zabs=zabs, pos_factor=pos_scaling,R0=R0)\n",
     "else:\n",
@@ -847,9 +849,11 @@
     "        \n",
     "    return save_path\n",
     "\n",
-    "def get_save_path_sim(save_path_spatial, bar_angle, resampled_sim_bool, age_lims, binning_str, pop_str):\n",
+    "def get_save_path_sim(save_path_spatial, sim_choice, bar_angle, resampled_sim_bool, age_lims, binning_str, pop_str):\n",
     "        \n",
-    "    save_path = save_path_spatial + \"sim/\"\n",
+    "    save_path = save_path_spatial\n",
+    "    \n",
+    "    save_path += f\"sim_{sim_choice}/\" if sim_choice != \"708main\" else \"sim/\"\n",
     "    MF.create_dir(save_path)\n",
     "    \n",
     "    save_path += f\"bar_angle_{bar_angle}/\"\n",
@@ -1095,8 +1099,8 @@
     "        if data_bool:\n",
     "            save_path = get_save_path_data(save_path_spatial,metal_lims=pop_dict[\"FeH\"],metal_lowcut=metal_lowcut,binning_str=binning_type,pop_str=pop_str)\n",
     "        else:\n",
-    "            save_path = get_save_path_sim(save_path_spatial,age_lims=pop_dict[\"age\"],bar_angle=rot_angle,resampled_sim_bool=sim_resampled_bool,\\\n",
-    "                                          binning_str=binning_type, pop_str=pop_str)\n",
+    "            save_path = get_save_path_sim(save_path_spatial,sim_choice=sim_choice,age_lims=pop_dict[\"age\"],bar_angle=rot_angle,\\\n",
+    "                                          resampled_sim_bool=sim_resampled_bool, binning_str=binning_type, pop_str=pop_str)\n",
     "\n",
     "        print(\"save_path:\",save_path)\n",
     "\n",
@@ -1173,20 +1177,20 @@
     "\n",
     "                if True: # plot limits as .txt and .npy\n",
     "\n",
-    "                    with open(array_path+'ranges.txt','w') as f:\n",
-    "                        f.write(\"range_min\\n\")\n",
+    "                    with open(array_path+'x_ranges.txt','w') as f:\n",
+    "                        f.write(\"x_range_min\\n\")\n",
     "                        for mini in range_min:\n",
     "                            f.write(f\"{mini}\\t\")\n",
-    "                        f.write(\"\\n\\nrange_max\\n\")\n",
+    "                        f.write(\"\\n\\nx_range_max\\n\")\n",
     "                        for maxi in range_max:\n",
     "                            f.write(f\"{maxi}\\t\")\n",
-    "                        f.write(\"\\n\\nrange_plot\\n\")\n",
+    "                        f.write(\"\\n\\nx_range_plot\\n\")\n",
     "                        for p in range_plot:\n",
     "                            f.write(f\"{p}\\t\")\n",
     "\n",
-    "                    np.save(array_path+\"range_min\", range_min)\n",
-    "                    np.save(array_path+\"range_max\", range_max)\n",
-    "                    np.save(array_path+\"range_plot\", range_plot)\n",
+    "                    np.save(array_path+\"x_range_min\", range_min)\n",
+    "                    np.save(array_path+\"x_range_max\", range_max)\n",
+    "                    np.save(array_path+\"x_range_plot\", range_plot)\n",
     "\n",
     "                print(\"Saved .txt and .npy in\",array_path)\n",
     "        else:\n",
@@ -2119,7 +2123,7 @@
     "        barax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
     "        barax.yaxis.set_label_position(\"right\")\n",
     "    \n",
-    "def set_xaxis_settings(ax,xmin,xmax,xlabel,xticks=None,labels_on=True):\n",
+    "def set_xaxis_settings(ax,xmin,xmax,xlabel,label_size=\"medium\",xticks=None,labels_on=True):\n",
     "#     ax.xaxis.set_minor_locator(ticker.MultipleLocator(0.25))\n",
     "    \n",
     "    ax.set_xlim(xmin,xmax)\n",
@@ -2128,12 +2132,12 @@
     "        ax.set_xticks(xticks)\n",
     "    \n",
     "    if labels_on:\n",
-    "        ax.set_xlabel(xlabel)\n",
+    "        ax.set_xlabel(xlabel,fontsize=label_size)\n",
     "    else:\n",
     "        ax.set_xticklabels([])\n",
     "        \n",
-    "def set_yaxis_settings(ax, map_string, error_string, map_dict=None, labels_on=True,y_shift_dict={},symmetric_ylims_bool=False,set_ylims=True,\\\n",
-    "                      hard_coded_ylims_bool=False, hard_coded_ylims_dict={}):\n",
+    "def set_yaxis_settings(ax, map_string, error_string, label_size=\"medium\",map_dict=None, labels_on=True,y_shift_dict={},symmetric_ylims_bool=False,\\\n",
+    "                       set_ylims=True, hard_coded_ylims_bool=False, hard_coded_ylims_dict={}):\n",
     "    \n",
     "    if map_string == 'tilt_abs':\n",
     "#         ax.yaxis.set_major_locator(ticker.MultipleLocator(20))\n",
@@ -2152,7 +2156,7 @@
     "        ax.yaxis.set_major_locator(ticker.MultipleLocator(25))\n",
     "    \n",
     "    if labels_on:\n",
-    "        ax.set_ylabel(symbol_dict[map_string]+units_dict[map_string],fontsize=ylabel_size)\n",
+    "        ax.set_ylabel(symbol_dict[map_string]+units_dict[map_string],fontsize=label_size)\n",
     "    else:\n",
     "        ax.set_yticklabels([])\n",
     "    \n",
@@ -2307,12 +2311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "legend_above_plot = False\n",
-    "\n",
     "marker_size = 7.5\n",
-    "scatter_join_bool = False\n",
-    "\n",
-    "surface_linestyle = \"--\""
+    "scatter_join_bool = False"
    ]
   },
   {
@@ -2329,7 +2329,7 @@
     "]\n",
     "\n",
     "weak_colors = [\n",
-    "    cmap(cmap.N//3),\n",
+    "    cmap(int(cmap.N/3)),\n",
     "    cmap(int(cmap.N*(1-1/3)))\n",
     "]\n",
     "\n",
@@ -2391,7 +2391,9 @@
     "    \n",
     "    all_dicts[key][\"number_bools\"] = nplots*[True]\n",
     "    \n",
-    "    all_dicts[key][\"scatter_markers\"] = 2*(2*[\"$\\u25EF$\",\"$\\u25A1$\"] + 2*[None])"
+    "    all_dicts[key][\"scatter_markers\"] = 2*(2*[\"$\\u25EF$\",\"$\\u25A1$\"] + 2*[None])\n",
+    "    \n",
+    "surface_linestyle = \"--\""
    ]
   },
   {
@@ -2441,7 +2443,78 @@
     "    all_dicts[key][\"number_alphas\"] = nplots*[number_alpha]\n",
     "    all_dicts[key][\"number_filled\"] = 2*[True]+2*[False]\n",
     "    \n",
-    "    all_dicts[key][\"number_bools\"] = nplots*[True]"
+    "    all_dicts[key][\"number_bools\"] = nplots*[True]\n",
+    "    \n",
+    "surface_linestyle = \"--\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# latitude 1b13; 708mainDiff4 and 708mainDiff5 (with 708main as fiducial); 2 columns\n",
+    "\n",
+    "bar_angle = 27\n",
+    "\n",
+    "all_dicts = {\n",
+    "    0: {\n",
+    "        \"load_paths\": [\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim_708mainDiff4/bar_angle_{bar_angle}/4age7/equal_steps/7_bins/arrays/\",\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim_708mainDiff4/bar_angle_{bar_angle}/9.5age10/equal_steps/7_bins/arrays/\",\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim/bar_angle_{bar_angle}/4age7/equal_steps/7_bins/arrays/\",\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim/bar_angle_{bar_angle}/9.5age10/equal_steps/7_bins/arrays/\"\n",
+    "        ],\n",
+    "        \"title\": \"Weak bar\",\n",
+    "        \"labels\": 4*[None],\n",
+    "        \"plot_ranges_str\": 4*[\"mean\"],\n",
+    "        \"surface_bools\": 4*[True],\n",
+    "        \"invert_xaxis\": False,\n",
+    "        \"xaxis_label\": x_label,\n",
+    "        \"x_ticks\": np.arange(1,13+1,1),\n",
+    "        \"x_lims\": [1,13],\n",
+    "        \"bar_width\": 0.3\n",
+    "    },\n",
+    "    1: {\n",
+    "        \"load_paths\": [\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim_708mainDiff5/bar_angle_{bar_angle}/4age7/equal_steps/7_bins/arrays/\",\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim_708mainDiff5/bar_angle_{bar_angle}/9.5age10/equal_steps/7_bins/arrays/\",\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim/bar_angle_{bar_angle}/4age7/equal_steps/7_bins/arrays/\",\n",
+    "            get_base_path(single_variable=\"b\") + f\"1b13/0R3.5/-2l2/sim/bar_angle_{bar_angle}/9.5age10/equal_steps/7_bins/arrays/\"\n",
+    "        ],\n",
+    "        \"title\": \"No bar\",\n",
+    "        \"labels\": [\"Young\",\"Old\",\"Young (fiducial, strong bar)\",\"Old (fiducial, strong bar)\"],\n",
+    "        \"plot_ranges_str\": 4*[\"mean\"],\n",
+    "        \"surface_bools\": 4*[True],\n",
+    "        \"invert_xaxis\": False,\n",
+    "        \"xaxis_label\": x_label,\n",
+    "        \"x_ticks\": np.arange(1,13+1,1),\n",
+    "        \"x_lims\": [1,13],\n",
+    "        \"bar_width\": 0.3\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "save_path_plot = get_base_path(single_variable=\"b\") + \"1b13/0R3.5/-2l2/sim_708mainDiff4__708mainDiff5/bar_angle_27/sim_equalSteps/sim_n7__n7/\"\n",
+    "\n",
+    "ncols = len(all_dicts)\n",
+    "\n",
+    "for key in all_dicts: # this loop sets features/settings that share the same values across the columns\n",
+    "    \n",
+    "    nplots = len(all_dicts[key][\"load_paths\"])\n",
+    "    \n",
+    "    all_dicts[key][\"zorders\"] = [8,7,6,5]\n",
+    "    all_dicts[key][\"zorderNs\"] = [6,5,8,7]\n",
+    "    all_dicts[key][\"colors\"] = strong_colors+weak_colors\n",
+    "    \n",
+    "    all_dicts[key][\"line_alphas\"] = 2*[line_alpha]+2*[0.8*line_alpha]\n",
+    "    all_dicts[key][\"surface_alphas\"] = 2*[surface_alpha]+2*[0.8*surface_alpha]\n",
+    "    all_dicts[key][\"number_alphas\"] = nplots*[number_alpha]\n",
+    "    all_dicts[key][\"number_filled\"] = 2*[True]+2*[False]\n",
+    "    \n",
+    "    all_dicts[key][\"number_bools\"] = nplots*[True]\n",
+    "    \n",
+    "surface_linestyle = \"-\""
    ]
   },
   {
@@ -2458,8 +2531,6 @@
    "outputs": [],
    "source": [
     "pos_units_dict[\"b\"] = \"deg\"\n",
-    "\n",
-    "legend_above_plot = True\n",
     "\n",
     "surface_linestyle = \"-\"\n",
     "\n",
@@ -2572,8 +2643,8 @@
     "symmetric_ylims_bool = False\n",
     "\n",
     "hard_coded_ylims = {\n",
-    "#     \"tilt_abs\": [-45,3],\n",
-    "    \"tilt_abs\": [-45,45],\n",
+    "    \"tilt_abs\": [-45,15],\n",
+    "#     \"tilt_abs\": [-45,45],\n",
     "}\n",
     "\n",
     "yshift_dict = {\n",
@@ -2593,7 +2664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_legend_params(ncols, all_dicts,number_bool,above_plot=False):\n",
+    "def get_legend_params(ncols, all_dicts,number_bool):\n",
     "    \n",
     "    if ncols != len(all_dicts):\n",
     "        raise ValueError(\"Expected the `ncols` to match the length of `all_dicts`.\")\n",
@@ -2608,9 +2679,11 @@
     "    else:\n",
     "        ncols_leg = 1\n",
     "    \n",
-    "    if above_plot:\n",
+    "    if ncols > 1 and len(legend_cols) == 1:\n",
+    "        # Legend above the plot\n",
+    "        \n",
     "        if ncols == 2:\n",
-    "            loc_x = -0.75\n",
+    "            loc_x = -0.65\n",
     "        elif ncols == 3:\n",
     "            loc_x = -0.6 if len(legend_cols) == 1 else 0.16\n",
     "        elif ncols == 1:\n",
@@ -2631,8 +2704,9 @@
     "legend_row = 1\n",
     "# legend_row = len(map_list)\n",
     "\n",
-    "legend_cols, legend_loc, ncols_leg = get_legend_params(ncols, all_dicts,number_bool,above_plot=legend_above_plot)\n",
-    "# legend_loc = \"upper right\"; ncols_leg=1\n",
+    "# legend_cols, legend_loc, ncols_leg = get_legend_params(ncols, all_dicts,number_bool)\n",
+    "legend_loc = (-0.4,1.45); ncols_leg=2\n",
+    "# legend_loc = (-0.4,1.65); ncols_leg=2\n",
     "# legend_cols = [1]\n",
     "\n",
     "legend_bool = True\n",
@@ -2668,7 +2742,7 @@
    "outputs": [],
    "source": [
     "plt.rcParams[\"font.size\"] = 22\n",
-    "ylabel_size = \"large\"\n",
+    "axis_labels_size = \"large\"\n",
     "legend_fontsize = 15.5"
    ]
   },
@@ -2681,12 +2755,13 @@
     "figsize_x = 15\n",
     "\n",
     "# figsize_y = 1.41*figsize_x # aspect ratio of A4\n",
-    "figsize_y = 1.5*figsize_x # aspect ratio of A4\n",
+    "figsize_y = 1.2*figsize_x\n",
     "\n",
     "figsize_x /= 2 if ncols == 1 else 1\n",
     "\n",
+    "# barax_height_ratio = 0.4\n",
     "# barax_height_ratio = 0.35\n",
-    "barax_height_ratio = 0.2"
+    "barax_height_ratio = 0.25"
    ]
   },
   {
@@ -2696,8 +2771,8 @@
    "outputs": [],
    "source": [
     "# map_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\",\"anisotropy\",\"correlation\",\"tilt_abs\"]; map_list_string = \"all\"\n",
-    "map_list = [\"anisotropy\",\"correlation\",\"tilt_abs\"]; map_list_string = \"anicorrtilt\"\n",
-    "# map_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\"]; map_list_string = \"velmeanstd\"\n",
+    "# map_list = [\"anisotropy\",\"correlation\",\"tilt_abs\"]; map_list_string = \"anicorrtilt\"\n",
+    "map_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\"]; map_list_string = \"velmeanstd\"\n",
     "# map_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\",\"anisotropy\"]; map_list_string = \"meanstdani\"\n",
     "# map_list = [\"std_vx\",\"std_vy\",\"anisotropy\"]; map_list_string = \"stdani\"\n",
     "# map_list = [\"mean_vx\",\"mean_vy\"]; map_list_string = \"velmeans\""
@@ -2757,6 +2832,9 @@
     "                bar_n_max = max(bar_n_max, np.max(map_dict[\"number\"]))\n",
     "    \n",
     "    for col in all_dicts:\n",
+    "        \n",
+    "        barax = axs[0] if ncols==1 else axs[0,col]\n",
+    "        \n",
     "        set_number_bar_axis_settings(barax,min_n=bar_n_min,max_n=bar_n_max,bar_log=bar_log,labels_on=col==ncols-1,\\\n",
     "                                     min_shift_bool=number_min_shift_bool,max_shift_bool=number_max_shift_bool)        \n",
     "else:\n",
@@ -2777,7 +2855,7 @@
     "        \n",
     "        ax = axs[row+1] if ncols==1 else axs[row+1,col]\n",
     "        \n",
-    "        set_yaxis_settings(ax,map_string,error_string,set_ylims=False,labels_on=col==0)\n",
+    "        set_yaxis_settings(ax,map_string,error_string,label_size=axis_labels_size, set_ylims=False,labels_on=col==0)\n",
     "        ax.axhline(y=0,linestyle='--',color=zero_line_color,alpha=zero_line_alpha,zorder=0)\n",
     "        \n",
     "        dic = all_dicts[col]\n",
@@ -2807,13 +2885,15 @@
     "        ymin,ymax = hard_coded_ylims[map_string]\n",
     "    \n",
     "    for col in all_dicts:\n",
+    "        ax = axs[row+1] if ncols==1 else axs[row+1,col]\n",
+    "        \n",
     "        ax.set_ylim(ymin,ymax)\n",
     "\n",
     "if legend_bool: # legend\n",
     "    for col in all_dicts:\n",
     "        if col in legend_cols:\n",
     "            \n",
-    "            ax = axs[legend_row] if ncols==1 else [legend_row,col]\n",
+    "            ax = axs[legend_row] if ncols==1 else axs[legend_row,col]\n",
     "            \n",
     "            ax.legend(loc=legend_loc,fontsize=legend_fontsize,ncols=ncols_leg)#,loc=\"lower left\")\n",
     "    \n",
@@ -2827,12 +2907,17 @@
     "            \n",
     "            ax = axs[row] if ncols==1 else axs[row,col]\n",
     "            \n",
-    "            set_xaxis_settings(ax,xmin=dic[\"x_lims\"][0],xmax=dic[\"x_lims\"][1],xlabel=dic[\"xaxis_label\"],xticks=dic[\"x_ticks\"],labels_on=row==len(map_list))\n",
+    "            x_ticks = dic[\"x_ticks\"]\n",
+    "            if ncols > 1 and dic[\"x_lims\"][1] == dic[\"x_ticks\"][-1] and col != ncols-1: # remove last x_tick if there's overlap\n",
+    "                x_ticks = x_ticks[:-1]\n",
+    "            \n",
+    "            set_xaxis_settings(ax,xmin=dic[\"x_lims\"][0],xmax=dic[\"x_lims\"][1],xlabel=dic[\"xaxis_label\"],xticks=x_ticks,labels_on=row==len(map_list),\\\n",
+    "                              label_size=axis_labels_size)\n",
     "\n",
     "            if dic[\"invert_xaxis\"]:\n",
     "                ax.invert_xaxis()\n",
     "    \n",
-    "    fig.align_labels()\n",
+    "fig.align_labels()\n",
     "    \n",
     "if True: # save\n",
     "    \n",
