--- a/notebooks/other_notebooks/monte_carlo_errors.ipynb
+++ b/notebooks/other_notebooks/monte_carlo_errors.ipynb
@@ -227,13 +227,63 @@
    "id": "16",
    "metadata": {},
    "source": [
+    "# Other plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "## Data d_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "ax.hist(data_trim[\"d_error\"],bins=100)\n",
+    "ax.axvline(data_trim[\"d_error\"].median(),label=f\"Median: {str(MF.return_int_or_dec(data_trim['d_error'].median(),2))}\",color=\"red\")\n",
+    "ax.set_xlabel(\"Distance uncertainty [kpc]\")\n",
+    "ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
+    "ax.legend()\n",
+    "plt.savefig(\"/Users/luismi/Desktop/MRes_UCLan/graphs/other_plots/MC_distance/data/d_uncertainty_hist.png\",dpi=100,bbox_inches=\"tight\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "ax.hist(data_trim[\"d_error\"]/data_trim[\"d\"],bins=100)\n",
+    "ax.axvline((data_trim[\"d_error\"]/data_trim[\"d\"]).median(),label=f\"Median: {str(100*MF.return_int_or_dec((data_trim['d_error']/data_trim['d']).median(),3))}%\",color=\"red\")\n",
+    "ax.set_xlabel(\"Distance fractional uncertainty\")\n",
+    "ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
+    "ax.legend()\n",
+    "plt.savefig(\"/Users/luismi/Desktop/MRes_UCLan/graphs/other_plots/MC_distance/data/d_frac_uncertainty_hist.png\",dpi=100,bbox_inches=\"tight\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
     "# Compute"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
